# angular-task-manager

./: README.md  package.json
angular-frontend/: package.json  pnpm-lock.yaml
backend/: .gitignore  pom.xml
frontend/: README.md  package-lock.json
node-backend-qa/: README.md  grafana_k6.md  index.html  jest.config.ts  package.json  pnpm-lock.yaml  tsconfig.json
node-backend-qa/coverage/: clover.xml  coverage-final.json  lcov.info
node-backend-qa/src/: index.ts  requests.env  requests.http  server.ts
node-express-backend/: .env  Dockerfile  README.md  docker-compose.yml  drizzle.config.ts  install.md  jest.config.ts  package.json  pnpm-lock.yaml  requests.http  task.http  test_cases.xlsx  test_cases_smoke.xlsx  test_cases_spike.xlsx  test_cases_stress.xlsx  test_cases_unit_integration.xlsx  test_execution_plan.md  test_results_template.xlsx  tsconfig.json  unit_integration_test_plan.md
node-express-backend/image_tests/: README.md
node-express-backend/load-tests/: README.md
node-express-backend/src/: index.ts  server.ts
node-task-manager-qa/: package.json  pnpm-lock.yaml
node-task-manager-qa/src/: server.ts
python-cli/: .env  COMMANDS.md  README.md  pyproject.toml
python-cli/src/.task_manager_cli/: session.json
python-cli/src/task_manager_cli/: cli.py  main.py  models.py  requirements.txt
python-cli/src/task_manager_cli/commands/: auth.py  tasks.py
python-cli/src/task_manager_cli/utils/: api.py  config.py
qa-chronicles/: 02-automation-basics.md  README.md
vue-frontend/: README.md  package.json  pnpm-lock.yaml  postcss.config.js
(+177 files in other folders)
