[project]
name = "taskmanager-cli"
version = "0.1.0"
description = "CLI for Task Manager API"
authors = [{name = "Gideon Ngetich", email = "gideonkngetich86@gmail.com"}]
requires-python = ">=3.8"
dependencies = [
    "requests",
    "typer",
    "rich",
    "python-dotenv"
]

[project.scripts]
taskmanager = "taskmanager.cli:main"